--- a/estilos/estilo.css
+++ b/estilos/estilo.css
@@ -1,69 +1,69 @@
 @font-face {
   font-family: "Geist";
-  src: url("../static/Geist-Thin.ttf") format("truetype");
+  src: url("../assets/Geist-Thin.ttf") format("truetype");
   font-weight: 100;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Geist";
-  src: url("../static/Geist-Light.ttf") format("truetype");
+  src: url("../assets/Geist-Light.ttf") format("truetype");
   font-weight: 300;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Geist";
-  src: url("../static/Geist-ExtraLight.ttf") format("truetype");
+  src: url("../assets/Geist-ExtraLight.ttf") format("truetype");
   font-weight: 200;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Geist";
-  src: url("../static/Geist-Regular.ttf") format("truetype");
+  src: url("../assets/Geist-Regular.ttf") format("truetype");
   font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Geist";
-  src: url("../static/Geist-Medium.ttf") format("truetype");
+  src: url("../assets/Geist-Medium.ttf") format("truetype");
   font-weight: 500;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Geist";
-  src: url("../static/Geist-SemiBold.ttf") format("truetype");
+  src: url("../assets/Geist-SemiBold.ttf") format("truetype");
   font-weight: 600;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Geist";
-  src: url("../static/Geist-Bold.ttf") format("truetype");
+  src: url("../assets/Geist-Bold.ttf") format("truetype");
   font-weight: 700;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Geist";
-  src: url("../static/Geist-ExtraBold.ttf") format("truetype");
+  src: url("../assets/Geist-ExtraBold.ttf") format("truetype");
   font-weight: 800;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Geist";
-  src: url("../static/Geist-Black.ttf") format("truetype");
+  src: url("../assets/Geist-Black.ttf") format("truetype");
   font-weight: 900;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Geist Variable";
-  src: url("../static/Geist-VariableFont_wght.ttf")
+  src: url("../assets/Geist-VariableFont_wght.ttf")
     format("truetype-variations");
   font-weight: 100 900;
   font-style: normal;
