--- a/estilos/gerar.css
+++ b/estilos/gerar.css
@@ -52,7 +52,8 @@
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
   background: linear-gradient(to bottom, black, 75%, rgba(0, 0, 0, 0.6));
-  width: 24rem;
+  max-width: 24rem;
+  width: 100%;
   height: 2rem;
   color: rgba(255, 255, 255, 0.8);
 }
