--- a/estilos/gerar.css
+++ b/estilos/gerar.css
@@ -49,11 +49,10 @@
   border-radius: 8px;
   padding-left: 1rem;
   padding-right: 6rem;
+  width: 24rem;
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
   background: linear-gradient(to bottom, black, 75%, rgba(0, 0, 0, 0.6));
-  max-width: 24rem;
-  width: 100%;
   height: 2rem;
   color: rgba(255, 255, 255, 0.8);
 }
